--- a/1_1_vm-ubuntu/Vagrantfile
+++ b/1_1_vm-ubuntu/Vagrantfile
@@ -5,6 +5,7 @@ Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/jammy64"
 #задаем провайдера и параметры вм 
   config.vm.provider "virtualbox" do |vb|
+    vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
     vb.name = "UbuntuPy"
     vb.memory = "512"
     vb.cpus = 1
